# qwen_own_project

./: .env.example  README.md  log.md  start.sh  stop.sh
backend/: README.md  pyproject.toml
backend/app/: __init__.py  api.py  config.py  graph_builder.py  graph_engine.py  main.py  models.py  static_server.py
backend/tests/: test_api.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx
frontend/src/hooks/: useGraphData.ts
frontend/src/lib/: api.ts
frontend/src/pages/: Communities.tsx  Dashboard.tsx  GraphView.tsx  Report.tsx
